@@ -1,11 +1,11 @@
 [trytond]
 user = admin
 password = admin
-database_name = test30
+database_name = test32
 database_type = postgresql
 config_file = /etc/trytond.conf
 
 [scenari]
 verbosity = 0
-tracer = pydbgr
+tracer = pdb
 
